--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,45 +7,32 @@ services:
     command: 'npm run watch'
     env_file:
       - .env
+    volumes:
+      - ./api:/usr/src/app
     working_dir: /usr/src/app
     ports:
       - 3333:3000
-    volumes:
-      - ./api:/usr/src/app
     networks:
-      - some_network
-    links:
-      - mariadb
+      - docker-service
     depends_on:
-      mariadb:
-        condition: service_healthy 
-  
-  mariadb:
-    image: mariadb
-    env_file:
-      - .env
+      - db
+  db:
+    image: mariadb:latest
+    container_name: docker-mariadb
     ports:
       - 3306:3306
-    volumes:
-      - ./db/data:/var/lib/mysql
-      - ./db/sql:/docker-entrypoint-initdb.d
+    env_file:
+      - ./.env
     networks:
-      - some_network
-    healthcheck:
-      test:
-        [
-          "CMD",
-          "mysqladmin",
-          "ping",
-          "-h",
-          "localhost",
-          "-uroot",
-          "-p${MARIADB_ROOT_PASSWORD}"
-        ]
-      interval: 5s
-      timeout: 5s
-      retries: 20
-
+      - docker-service
+    volumes: 
+      - ./data:/data/db
+  adminer:
+    image: adminer
+    ports:
+      - 8080:8080
+    networks:
+      - docker-service
 networks:
-  some_network:
+  docker-service:
     driver: bridge
