--- a/api/package.json
+++ b/api/package.json
@@ -13,7 +13,8 @@
         "joi": "^17.8.3",
         "knex": "^2.4.2",
         "morgan": "~1.9.1",
-        "mysql": "^2.18.1"
+        "mysql": "^2.18.1",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "nodemon": "2.0.20"
