--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: api_nodejs
     command: 'npm run watch'
     env_file:
-      - .env
+      - db.env
     volumes:
       - ./api:/usr/src/app
     working_dir: /usr/src/app
@@ -22,7 +22,7 @@ services:
     ports:
       - 3306:3306
     env_file:
-      - ./.env
+      - ./db.env
     networks:
       - docker-service
     volumes: 
@@ -33,6 +33,34 @@ services:
       - 8080:8080
     networks:
       - docker-service
+
+  apiUser:
+    image: node:alpine
+    container_name: api_user_nodejs
+    command: 'npm run watch'
+    env_file:
+      - usr.env
+    volumes:
+      - ./api:/usr/src/app
+    working_dir: /usr/src/app
+    ports:
+      - 3330:3000
+    networks:
+      - docker-service
+    depends_on:
+      - dbUser
+  dbUser:
+    image: mariadb:latest
+    container_name: docker-user-mariadb
+    ports:
+      - 3308:3306
+    env_file:
+      - ./usr.env
+    networks:
+      - docker-service
+    volumes: 
+      - ./data:/data/dbUser
+      
 networks:
   docker-service:
     driver: bridge
