--- a/usr.env
+++ b/usr.env
@@ -1,8 +1,8 @@
 NODE_ENV=developement
 
-MARIADB_HOST=db
+MARIADB_HOST=userdb
 MARIADB_ROOT_USER=root
 MARIADB_ROOT_PASSWORD=root
-MARIADB_DATABASE=sandwichs 
+MARIADB_DATABASE=sandwichs_user 
 MARIADB_USER=user
 MARIADB_PASSWORD=mdp
