--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,8 @@ services:
       - ./db.env
     networks:
       - docker-service
-    volumes: 
-      - ./data:/data/db
+    volumes:
+      - ./data/db:/var/lib/mysql
   adminer:
     image: adminer
     ports:
@@ -58,9 +58,9 @@ services:
       - ./usr.env
     networks:
       - docker-service
-    volumes: 
-      - ./data:/data/dbUser
-      
+    volumes:
+      - ./data/usr:/var/lib/mysql
+
 networks:
   docker-service:
     driver: bridge
