--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     networks:
       - docker-service
     volumes:
-      - ./data/db:/var/lib/mysql
+      - ./data/api:/var/lib/mysql
   adminer:
     image: adminer
     ports:
@@ -41,7 +41,7 @@ services:
     env_file:
       - usr.env
     volumes:
-      - ./api:/usr/src/app
+      - ./apiUser:/usr/src/app
     working_dir: /usr/src/app
     ports:
       - 3330:3000
