--- a/usr.env
+++ b/usr.env
@@ -1,6 +1,6 @@
 NODE_ENV=developement
 
-MARIADB_HOST=userdb
+MARIADB_HOST=dbUser
 MARIADB_ROOT_USER=root
 MARIADB_ROOT_PASSWORD=root
 MARIADB_DATABASE=sandwichs_user 
