--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,40 +33,17 @@ services:
       - 8080:8080
     networks:
       - docker-service
-  auth:
+  gateway:
     image: node:alpine
-    container_name: auth_nodejs
+    container_name: gateway
     command: 'npm run watch'
     env_file:
-      - ./auth/.env
+      - ./gateway/.env
     volumes:
-      - ./auth:/usr/src/app/auth
-    working_dir: /usr/src/app/auth
+      - ./gateway:/usr/src/app/gateway
+    working_dir: /usr/src/app/gateway
     ports:
-      - 3334:3000
-    networks:
-      - service-auth
-    depends_on:
-      - dbauth
-  dbauth:
-    image: mariadb:latest
-    container_name: mariadb-auth
-    ports:
-      - 3307:3306
-    env_file:
-      - ./auth/.env
-    networks:
-      - service-auth
-    volumes: 
-      - ./data-auth:/data/dbauth
-  adminerauth:
-    image: adminer
-    ports:
-      - 8081:8080
-    networks:
-      - service-auth
+      - 3001:3000
 networks:
-  service-auth:
-    driver: bridge
   docker-service:
     driver: bridge
