--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       - 3001:3000
     links:
       - api
-      - auth
+      - apiUser
     networks:
       - docker-service
   apiUser:
